--- a/config/application.yaml
+++ b/config/application.yaml
@@ -1,3 +1,6 @@
 package:
   version: 1.0.0
   url: https://github.com/pooza/shooby-do-bop
+youtube:
+  urls:
+    videos: https://www.googleapis.com/youtube/v3/videos
