--- a/config/application.yaml
+++ b/config/application.yaml
@@ -5,6 +5,8 @@ package:
     - Tatsuya Koishi
   email:
     - tkoishi@b-shock.co.jp
+cert:
+  url: https://curl.haxx.se/ca/cacert.pem
 youtube:
   urls:
     videos: https://www.googleapis.com/youtube/v3/videos
