--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,11 @@ jobs:
           name: run RuboCop
           command: bundle exec rubocop
       - run:
-          name: update repository
-          command: bundle exec rake repos:update
+          name: update gem
+          command: bundle exec rake bundle:update
       - run:
-          name: check repository
-          command: bundle exec rake repos:check
+          name: check gem
+          command: bundle exec rake bundle:check
+      - run:
+          name: run test
+          command: bundle exec rake test
