--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,9 +1,11 @@
+require: rubocop-performance
+
 AllCops:
   AllowSymlinksInCacheRootDirectory: true
   DisplayCopNames: true
   Exclude:
     - '**/._*'
-  TargetRubyVersion: 2.6
+  TargetRubyVersion: 2.7
 
 Style/FrozenStringLiteralComment:
   Enabled: false
@@ -49,19 +51,6 @@ Metrics/ClassLength:
   Exclude:
     - test/*
 
-Naming/FileName:
-  Exclude:
-    - Rakefile.rb
-    - '**/Rakefile*.rb'
-
-Metrics/BlockLength:
-  Exclude:
-    - Rakefile.rb
-    - '**/Rakefile*.rb'
-
-Style/BracesAroundHashParameters:
-  Enabled: false
-
 Style/Documentation:
   Enabled: false
 
@@ -90,7 +79,7 @@ Style/IdenticalConditionalBranches:
   Exclude:
     - test/*
 
-Metrics/LineLength:
+Layout/LineLength:
   Max: 100
   Exclude:
     - test/*
@@ -126,8 +115,20 @@ Style/RescueModifier:
 Style/StringLiterals:
   EnforcedStyle: single_quotes
 
+Style/HashTransformValues:
+  Enabled: true
+
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: true
+
 Metrics/CyclomaticComplexity:
   Max: 10
 
 Metrics/PerceivedComplexity:
   Max: 10
+
+Naming/RescuedExceptionsVariableName:
+  PreferredName: e
