--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,6 +5,9 @@ AllCops:
   DisplayCopNames: true
   Exclude:
     - '**/._*'
+    - '.git/**/*'
+    - 'public/**/*'
+    - 'tmp/**/*'
   TargetRubyVersion: 2.7
 
 Style/FrozenStringLiteralComment:
@@ -22,6 +25,9 @@ Layout/ParameterAlignment:
 Layout/FirstHashElementIndentation:
   EnforcedStyle: consistent
 
+Layout/FirstArrayElementIndentation:
+  EnforcedStyle: consistent
+
 Layout/SpaceBeforeBlockBraces:
   EnforcedStyle: space
 
@@ -35,6 +41,9 @@ Layout/SpaceInsideHashLiteralBraces:
 
 Layout/EmptyLineAfterGuardClause:
   Enabled: false
+
+Layout/MultilineMethodCallIndentation:
+  EnforcedStyle: indented
 
 Metrics/AbcSize:
   Max: 30
@@ -132,3 +141,16 @@ Metrics/PerceivedComplexity:
 
 Naming/RescuedExceptionsVariableName:
   PreferredName: e
+
+Lint/RaiseException:
+  Enabled: true
+
+Lint/StructNewOverride:
+  Enabled: true
+
+Layout/SpaceAroundMethodCallOperator:
+  Enabled: true
+
+Style/ExponentialNotation:
+  Enabled: true
+
