--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,7 @@ require: rubocop-performance
 AllCops:
   AllowSymlinksInCacheRootDirectory: true
   DisplayCopNames: true
+  NewCops: enable
   Exclude:
     - '**/._*'
     - '.git/**/*'
@@ -135,6 +136,18 @@ Style/SingleArgumentDig:
 Style/StringConcatenation:
   Enabled: true
 
+Style/CombinableLoops: # (new in 0.90)
+  Enabled: true
+
+Style/KeywordParametersOrder: # (new in 0.90)
+  Enabled: true
+
+Style/RedundantSelfAssignment: # (new in 0.90)
+  Enabled: true
+
+Style/SoleNestedConditional: # (new in 0.89)
+  Enabled: true
+
 Layout/ParameterAlignment:
   EnforcedStyle: with_fixed_indentation
 
@@ -247,6 +260,18 @@ Lint/UnreachableLoop:
 Lint/MixedRegexpCaptureTypes:
   Enabled: true
 
+Lint/DuplicateRequire: # (new in 0.90)
+  Enabled: true
+
+Lint/EmptyFile: # (new in 0.90)
+  Enabled: true
+
+Lint/TrailingCommaInAttributeDeclaration: # (new in 0.90)
+  Enabled: true
+
+Lint/UselessMethodDefinition: # (new in 0.90)
+  Enabled: true
+
 Performance/AncestorsInclude:
   Enabled: true
 
@@ -271,3 +296,5 @@ Performance/Squeeze:
 Performance/StringInclude:
   Enabled: true
 
+Performance/Sum: # (new in 1.8)
+  Enabled: true
