--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,15 +1,21 @@
-require: rubocop-performance
+require:
+  - rubocop-performance
 
 AllCops:
   AllowSymlinksInCacheRootDirectory: true
   DisplayCopNames: true
   NewCops: enable
+  Include:
+    - '**/*.rb'
+    - '**/Rakefile'
+    - '**/config.ru'
   Exclude:
     - '**/._*'
-    - '.git/**/*'
+    - '**/.git/**/*'
     - 'public/**/*'
+    - 'config/**/*'
     - 'tmp/**/*'
-  TargetRubyVersion: 2.7
+  TargetRubyVersion: 3.0
 
 Naming/RescuedExceptionsVariableName:
   PreferredName: e
@@ -49,11 +55,11 @@ Style/WordArray:
 
 Style/IdenticalConditionalBranches:
   Exclude:
-    - test/*
+    - 'test/*'
 
 Style/IfUnlessModifier:
   Exclude:
-    - test/*
+    - 'test/*'
 
 Style/AsciiComments:
   Enabled: false
@@ -183,31 +189,57 @@ Layout/SpaceAroundMethodCallOperator:
 Layout/LineLength:
   Max: 100
   Exclude:
-    - test/*
+    - 'test/*'
 
 Layout/EmptyLinesAroundAttributeAccessor:
   Enabled: true
 
+Layout/EndOfLine:
+  EnforcedStyle: lf
+
 Metrics/AbcSize:
   Max: 30
   Exclude:
-    - test/*
+    - 'test/*'
+
+Metrics/BlockLength:
+  Exclude:
+    - 'test/*'
+    - '**/contract/*'
+    - '**/controller/*'
+    - 'app/task/*'
+    - '*.gemspec'
 
 Metrics/MethodLength:
   Max: 20
   Exclude:
-    - test/*
+    - 'test/*'
 
 Metrics/ClassLength:
   Max: 200
   Exclude:
-    - test/*
+    - 'test/*'
+    - '**/contract/*'
+    - '**/controller/*'
+
+Metrics/ModuleLength:
+  Max: 200
+  Exclude:
+    - 'test/*'
+    - '**/contract/*'
+    - '**/controller/*'
 
 Metrics/CyclomaticComplexity:
   Max: 10
+  Exclude:
+    - 'test/*'
+    - '**/contract/*'
 
 Metrics/PerceivedComplexity:
   Max: 10
+  Exclude:
+    - 'test/*'
+    - '**/contract/*'
 
 Lint/AssignmentInCondition:
   Enabled: false
@@ -298,3 +330,4 @@ Performance/StringInclude:
 
 Performance/Sum: # (new in 1.8)
   Enabled: true
+
