--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,6 @@
 require:
   - rubocop-performance
+  - rubocop-rake
 
 AllCops:
   AllowSymlinksInCacheRootDirectory: true
@@ -221,6 +222,7 @@ Metrics/ClassLength:
     - 'test/*'
     - '**/contract/*'
     - '**/controller/*'
+    - '**/service/*'
 
 Metrics/ModuleLength:
   Max: 200
@@ -228,6 +230,7 @@ Metrics/ModuleLength:
     - 'test/*'
     - '**/contract/*'
     - '**/controller/*'
+    - '**/service/*'
 
 Metrics/CyclomaticComplexity:
   Max: 10
