--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-.bundle/
+.bundle
 .DS_Store
-Thumbs.db
 ._*
+Thumbs.db
+Desktop.ini
 .fuse*
-config/local.*
+*.log
 .sass-cache
 dist
+*.code-workspace
+.vscode
