--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,12 +10,20 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.1.1
+          ruby-version: 3.1.2
+      - name: apt install
+        run: |
+          sudo apt update
       - name: bundle install
         run: |
           gem install bundler -v '~>2.0'
           bundle install --jobs 4 --retry 3
           bundle exec rake bundle:update
+          git diff
           bundle exec rake bundle:check
-      - run: bundle exec rubocop
-      - run: bundle exec rake test
+      - name: Run lint
+        run: |
+          bundle exec rubocop
+      - name: Run test
+        run: |
+          bundle exec rake test
