--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,11 @@
 version: 2
 updates:
 - package-ecosystem: bundler
-  directory: "/"
+  directory: '/'
   schedule:
     interval: daily
-    time: '20:00'
+    time: '03:00'
+    timezone: 'Asia/Tokyo'
   open-pull-requests-limit: 10
   target-branch: master
   versioning-strategy: lockfile-only
