--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,336 +1,143 @@
 require:
   - rubocop-performance
+  - rubocop-minitest
   - rubocop-rake
 
 AllCops:
   AllowSymlinksInCacheRootDirectory: true
   DisplayCopNames: true
-  NewCops: enable
+  Exclude:
+    - '**/._*'
+    - '**/.git/**/*'
+    - public/**/*
+    - config/**/*
+    - tmp/**/*
+    - '**/old/**/*'
   Include:
     - '**/*.rb'
     - '**/Rakefile'
     - '**/config.ru'
-  Exclude:
-    - '**/._*'
-    - '**/.git/**/*'
-    - 'public/**/*'
-    - 'config/**/*'
-    - 'tmp/**/*'
+  NewCops: enable
   TargetRubyVersion: 3.1
-
-Naming/RescuedExceptionsVariableName:
-  PreferredName: e
-
-Style/FrozenStringLiteralComment:
+Layout/EmptyLineAfterGuardClause:
   Enabled: false
-
-Style/DoubleNegation:
-  Enabled: false
-
-Style/FormatStringToken:
-  EnforcedStyle: template
-
-Style/Documentation:
-  Enabled: false
-
-Style/RedundantReturn:
-  Enabled: false
-
-Style/RescueStandardError:
-  Enabled: false
-
-Style/SymbolArray:
-  EnforcedStyle: brackets
-
-Style/TrailingCommaInArguments:
-  EnforcedStyleForMultiline: comma
-
-Style/TrailingCommaInArrayLiteral:
-  EnforcedStyleForMultiline: comma
-
-Style/TrailingCommaInHashLiteral:
-  EnforcedStyleForMultiline: comma
-
-Style/WordArray:
-  EnforcedStyle: brackets
-
-Style/IdenticalConditionalBranches:
-  Exclude:
-    - 'test/*'
-
-Style/IfUnlessModifier:
-  Exclude:
-    - 'test/*'
-
-Style/AsciiComments:
-  Enabled: false
-
-Style/FormatString:
-  EnforcedStyle: percent
-
-Style/ConditionalAssignment:
-  Enabled: false
-
-Style/YodaCondition:
-  Enabled: false
-
-Style/RescueModifier:
-  Enabled: false
-
-Style/StringLiterals:
-  EnforcedStyle: single_quotes
-
-Style/HashTransformValues:
-  Enabled: true
-
-Style/HashEachMethods:
-  Enabled: true
-
-Style/HashTransformKeys:
-  Enabled: true
-
-Style/ExponentialNotation:
-  Enabled: true
-
-Style/SlicingWithRange:
-  Enabled: true
-
-Style/RedundantRegexpCharacterClass:
-  Enabled: true
-
-Style/RedundantRegexpEscape:
-  Enabled: true
-
-Style/RedundantFetchBlock:
-  Enabled: true
-
-Style/AccessorGrouping:
-  Enabled: true
-
-Style/BisectedAttrAccessor:
-  Enabled: true
-
-Style/RedundantAssignment:
-  Enabled: true
-
-Style/ArrayCoercion:
-  Enabled: true
-
-Style/CaseLikeIf:
-  Enabled: true
-
-Style/HashAsLastArrayItem:
-  Enabled: true
-
-Style/HashLikeCase:
-  Enabled: true
-
-Style/RedundantFileExtensionInRequire:
-  Enabled: true
-
-Style/ExplicitBlockArgument:
-  Enabled: true
-
-Style/GlobalStdStream:
-  Enabled: true
-
-Style/OptionalBooleanParameter:
-  Enabled: true
-
-Style/SingleArgumentDig:
-  Enabled: true
-
-Style/StringConcatenation:
-  Enabled: true
-
-Style/CombinableLoops: # (new in 0.90)
-  Enabled: true
-
-Style/KeywordParametersOrder: # (new in 0.90)
-  Enabled: true
-
-Style/RedundantSelfAssignment: # (new in 0.90)
-  Enabled: true
-
-Style/SoleNestedConditional: # (new in 0.89)
-  Enabled: true
-
-Layout/ParameterAlignment:
-  EnforcedStyle: with_fixed_indentation
-
-Layout/FirstHashElementIndentation:
-  EnforcedStyle: consistent
-
-Layout/FirstArrayElementIndentation:
-  EnforcedStyle: consistent
-
+Layout/EndOfLine:
+  EnforcedStyle: lf
 Layout/FirstArgumentIndentation:
   EnforcedStyle: consistent
-
+Layout/FirstArrayElementIndentation:
+  EnforcedStyle: consistent
+Layout/FirstHashElementIndentation:
+  EnforcedStyle: consistent
+Layout/LineEndStringConcatenationIndentation:
+  EnforcedStyle: indented
+Layout/LineLength:
+  Exclude:
+    - test/*
+  Max: 100
+Layout/MultilineMethodCallIndentation:
+  EnforcedStyle: indented
+Layout/ParameterAlignment:
+  EnforcedStyle: with_fixed_indentation
 Layout/SpaceBeforeBlockBraces:
   EnforcedStyle: space
-
 Layout/SpaceInsideBlockBraces:
   EnforcedStyle: no_space
   EnforcedStyleForEmptyBraces: no_space
   SpaceBeforeBlockParameters: false
-
 Layout/SpaceInsideHashLiteralBraces:
   EnforcedStyle: no_space
-
-Layout/EmptyLineAfterGuardClause:
-  Enabled: false
-
-Layout/MultilineMethodCallIndentation:
-  EnforcedStyle: indented
-
-Layout/SpaceAroundMethodCallOperator:
-  Enabled: true
-
-Layout/LineLength:
-  Max: 100
-  Exclude:
-    - 'test/*'
-
-Layout/EmptyLinesAroundAttributeAccessor:
-  Enabled: true
-
-Layout/EndOfLine:
-  EnforcedStyle: lf
-
-Metrics/AbcSize:
-  Max: 30
-  Exclude:
-    - 'test/*'
-
-Metrics/BlockLength:
-  Exclude:
-    - 'test/*'
-    - '**/contract/*'
-    - '**/controller/*'
-    - 'app/task/*'
-    - '*.gemspec'
-
-Metrics/MethodLength:
-  Max: 20
-  Exclude:
-    - 'test/*'
-
-Metrics/ClassLength:
-  Max: 200
-  Exclude:
-    - 'test/*'
-    - '**/contract/*'
-    - '**/controller/*'
-    - '**/service/*'
-
-Metrics/ModuleLength:
-  Max: 200
-  Exclude:
-    - 'test/*'
-    - '**/contract/*'
-    - '**/controller/*'
-    - '**/service/*'
-
-Metrics/CyclomaticComplexity:
-  Max: 10
-  Exclude:
-    - 'test/*'
-    - '**/contract/*'
-
-Metrics/PerceivedComplexity:
-  Max: 10
-  Exclude:
-    - 'test/*'
-    - '**/contract/*'
-
 Lint/AssignmentInCondition:
   Enabled: false
-
-Lint/UnusedBlockArgument:
-  Enabled: false
-
 Lint/UnusedMethodArgument:
   Enabled: false
-
-Lint/RaiseException:
-  Enabled: true
-
-Lint/StructNewOverride:
-  Enabled: true
-
-Lint/DuplicateElsifCondition:
-  Enabled: true
-
-Lint/DeprecatedOpenSSLConstant:
-  Enabled: true
-
-Lint/BinaryOperatorWithIdenticalOperands:
-  Enabled: true
-
-Lint/DuplicateRescueException:
-  Enabled: true
-
-Lint/EmptyConditionalBody:
-  Enabled: true
-
-Lint/FloatComparison:
-  Enabled: true
-
-Lint/MissingSuper:
-  Enabled: true
-
-Lint/OutOfRangeRegexpRef:
-  Enabled: true
-
-Lint/SelfAssignment:
-  Enabled: true
-
-Lint/TopLevelReturnWithArgument:
-  Enabled: true
-
-Lint/UnreachableLoop:
-  Enabled: true
-
-Lint/MixedRegexpCaptureTypes:
-  Enabled: true
-
-Lint/DuplicateRequire: # (new in 0.90)
-  Enabled: true
-
-Lint/EmptyFile: # (new in 0.90)
-  Enabled: true
-
-Lint/TrailingCommaInAttributeDeclaration: # (new in 0.90)
-  Enabled: true
-
-Lint/UselessMethodDefinition: # (new in 0.90)
-  Enabled: true
-
-Performance/AncestorsInclude:
-  Enabled: true
-
-Performance/BigDecimalWithNumericArgument:
-  Enabled: true
-
-Performance/RedundantSortBlock:
-  Enabled: true
-
-Performance/RedundantStringChars:
-  Enabled: true
-
-Performance/ReverseFirst:
-  Enabled: true
-
-Performance/SortReverse:
-  Enabled: true
-
-Performance/Squeeze:
-  Enabled: true
-
-Performance/StringInclude:
-  Enabled: true
-
-Performance/Sum: # (new in 1.8)
-  Enabled: true
-
+Metrics/AbcSize:
+  Exclude:
+    - test/*
+  Max: 30
+Metrics/BlockLength:
+  Exclude:
+    - test/*
+    - '**/contract/*'
+    - '**/controller/*'
+    - app/task/**/*.rb
+    - '*.gemspec'
+Metrics/ClassLength:
+  Exclude:
+    - test/*
+    - '**/contract/*'
+    - '**/controller/*'
+    - '**/service/*'
+  Max: 200
+Metrics/CyclomaticComplexity:
+  Exclude:
+    - test/*
+    - '**/contract/*'
+  Max: 10
+Metrics/MethodLength:
+  Exclude:
+    - test/*
+  Max: 20
+Metrics/ModuleLength:
+  Exclude:
+    - test/*
+    - '**/contract/*'
+    - '**/controller/*'
+    - '**/service/*'
+  Max: 200
+Metrics/PerceivedComplexity:
+  Exclude:
+    - test/*
+    - '**/contract/*'
+  Max: 10
+Minitest/MultipleAssertions:
+  Enabled: false
+Naming/RescuedExceptionsVariableName:
+  PreferredName: e
+Rake:
+  Exclude:
+    - '*'
+  Include:
+    - Rakefile
+    - '*.rake'
+    - app/task/**/*.rb
+Style/AsciiComments:
+  Enabled: false
+Style/ConditionalAssignment:
+  Enabled: false
+Style/Documentation:
+  Enabled: false
+Style/EmptyMethod:
+  EnforcedStyle: expanded
+Style/FormatString:
+  EnforcedStyle: percent
+Style/FormatStringToken:
+  EnforcedStyle: template
+Style/FrozenStringLiteralComment:
+  Enabled: false
+Style/IdenticalConditionalBranches:
+  Exclude:
+    - test/*
+Style/IfUnlessModifier:
+  Exclude:
+    - test/*
+Style/RedundantReturn:
+  Enabled: false
+Style/RescueModifier:
+  Enabled: false
+Style/RescueStandardError:
+  Enabled: false
+Style/StringLiterals:
+  EnforcedStyle: single_quotes
+Style/SymbolArray:
+  EnforcedStyle: brackets
+Style/TrailingCommaInArguments:
+  EnforcedStyleForMultiline: comma
+Style/TrailingCommaInArrayLiteral:
+  EnforcedStyleForMultiline: comma
+Style/TrailingCommaInHashLiteral:
+  EnforcedStyleForMultiline: comma
+Style/WordArray:
+  EnforcedStyle: brackets
+Style/YodaCondition:
+  Enabled: false
